Fixed alignment of bill sponsor names. Also removed the unique styling for (what we thought was) the primary sponsor, which it turns out we don't have reliable data for yet.

--- a/site/media/main.css
+++ b/site/media/main.css
@@ -507,3 +507,5 @@ footer .openTwit a, footer .openTwit a:active, footer .openTwit a:visited{
 .block {
     display: block;
 }
+
+.sponsor-type { display: inline; font-size: 75%; vertical-align: bottom; }
